fix align center position

--- a/html/css/app.css
+++ b/html/css/app.css
@@ -259,7 +259,7 @@ i {
 
 .menu.align-center {
 	left: 50%;
-	top: 40;
+	top: 560;
 	transform: translate(-50%, -50%);
 }
 
